# icfpc2025

./: README.md  local_test.py  openapi.yaml  solver.cpp
solver/: Cargo.toml  writeup_en.md  writeup_jp.md
