[package]
name = "main"
version = "0.1.0"
edition = "2021"


[dependencies]
varisat = "0.2"
rand = "0.8"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
itertools = "=0.11.0"
rustc-hash = "=1.1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
thiserror = "1"